--- a/html-css/pdfs/index6.html
+++ b/html-css/pdfs/index6.html
@@ -28,6 +28,10 @@
             conteúdo periférico do site
         </aside>
     </main>
+
+    <div style="width: auto;"   >
+        Contexto
+    </div>
     <footer>
         conteúdo do rodapé
     </footer>
