--- a/html-css/desafios/modulo-1/d009/curso-html.html
+++ b/html-css/desafios/modulo-1/d009/curso-html.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Curso de HTML5</h1>
-    <iframe poster="imagens/thumb-html.png" width="560" height="315" src="https://www.youtube.com/embed/rsFCVjr5yxc?si=LgCm2RUttg3f81k2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <h3><a rel="External" target="_blank" href="https://youtube.com/playlist?list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o&si=ez_nd_c1H8b1O2B4">Veja o curso completo</a></h3>
-    <a href="index.html"><img src="imagens/voltar.png" alt="Voltar"></a>
+    <div class="container">
+        <div style="position: absolute;">
+            <h1>Curso de HTML5</h1>
+            <iframe poster="imagens/thumb-html.png" width="560" height="315" src="https://www.youtube.com/embed/rsFCVjr5yxc?si=LgCm2RUttg3f81k2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <h3><a rel="External" target="_blank" href="https://youtube.com/playlist?list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o&si=ez_nd_c1H8b1O2B4">Veja o curso completo</a></h3>
+            <a href="index.html"><img src="imagens/voltar.png" alt="Voltar"></a>
+        </div>
+    </div>
 </body>
 </html>
