--- a/html-css/desafios/modulo-1/d009/curso-js.html
+++ b/html-css/desafios/modulo-1/d009/curso-js.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Curso de JavaScript</h1>
-    <iframe poster="imagens/thumb-js" width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=68uJLOh-FB2ll2qX&amp;list=PLHz_AreHm4dlsK3Nr9GVvXCbpQyHQl1o1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <h3><a rel="External" target="_blank" href="https://youtube.com/playlist?list=PLHz_AreHm4dlsK3Nr9GVvXCbpQyHQl1o1&si=vGaMMWt2ssE7b8c8">Veja o curso completo</a></h3>
-    <a href="index.html"><img src="imagens/voltar.png" alt="Voltar"></a>
+    <div class="container">
+        <div style="position: absolute;">
+            <h1>Curso de JavaScript</h1>
+            <iframe poster="imagens/thumb-js" width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=68uJLOh-FB2ll2qX&amp;list=PLHz_AreHm4dlsK3Nr9GVvXCbpQyHQl1o1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <h3><a rel="External" target="_blank" href="https://youtube.com/playlist?list=PLHz_AreHm4dlsK3Nr9GVvXCbpQyHQl1o1&si=vGaMMWt2ssE7b8c8">Veja o curso completo</a></h3>
+            <a href="index.html"><img src="imagens/voltar.png" alt="Voltar"></a>
+        </div>
+    </div>
 </body>
 </html>
