--- a/html-css/desafios/modulo-1/d009/curso-python.html
+++ b/html-css/desafios/modulo-1/d009/curso-python.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Curso de Python<h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=vk0muQwSNeD77oAD&amp;list=PLHz_AreHm4dlKP6QQCekuIPky1CiwmdI6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <h3><a rel="External" target="_blank" href="https://youtube.com/playlist?list=PLHz_AreHm4dlKP6QQCekuIPky1CiwmdI6&si=NbGs5m6SAzuLz0me">Veja o curso completo</a></h3>
-    <a href="index.html"><img src="imagens/voltar.png" alt="Voltar"></a>
+    <div class="container">
+        <div style="position: absolute;">
+            <h1>Curso de Python<h1>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=vk0muQwSNeD77oAD&amp;list=PLHz_AreHm4dlKP6QQCekuIPky1CiwmdI6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <h3><a rel="External" target="_blank" href="https://youtube.com/playlist?list=PLHz_AreHm4dlKP6QQCekuIPky1CiwmdI6&si=NbGs5m6SAzuLz0me">Veja o curso completo</a></h3>
+            <a href="index.html"><img src="imagens/voltar.png" alt="Voltar"></a>
+        </div>
+    </div>
 </body>
 </html>
