--- a/html-css/desafios/modulo-1/d009/index.html
+++ b/html-css/desafios/modulo-1/d009/index.html
@@ -7,11 +7,15 @@
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body>  
+        <div class="container">
+            <div style="position: absolute;">
     <h1>Vídeos legais para assistir</h1>
     <a href="curso-html.html" rel="External" target="_self"><img src="imagens/thumb-html.png" alt="HTML"></a>
     <a href="curso-js.html" rel="External" target="_self"><img src="imagens/thumb-js.png" alt="JavaScript"></a> <br>
     <a href="curso-hardware.html" rel="External" target="_self"><img src="imagens/thumb-hardware.png" alt="Hardware"></a>
     <a href="curso-python.html" rel="External" target="_self"><img src="imagens/thumb-python.png" alt="Python"></a>
+            </div>
+        </div>
 </body>
 </html>
