--- a/html-css/desafios/modulo-2/d010/index.html
+++ b/html-css/desafios/modulo-2/d010/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Android</title>
+    <link rel="stylesheet" href="estilos.css">
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
+    <header>
+        <div class="cabecalho">
+            <h1>CURIOSIDADES DE TECNOLOGIA</h1>
+            <h4>Tudo aquilo que você sempre quis saber sobre o mundo <br> Tech, em um único lugar.</h4>
+        </div>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Notícias</a>
+            <a href="#">Curiosidades</a>
+            <a href="#">Fale Conosco</a>
+        </nav>
+    </header>
         
 </body>
 </html>
