--- a/html-css/desafios/modulo-2/d010/index.html
+++ b/html-css/desafios/modulo-2/d010/index.html
@@ -10,8 +10,11 @@
 <body>
     <header>
         <div class="cabecalho">
+
             <h1>CURIOSIDADES DE TECNOLOGIA</h1>
+
             <h4>Tudo aquilo que você sempre quis saber sobre o mundo <br> Tech, em um único lugar.</h4>
+
         </div>
         <nav>
             <a href="#">Home</a>
@@ -20,6 +23,73 @@
             <a href="#">Fale Conosco</a>
         </nav>
     </header>
-        
+    <main style="width: 800px;">
+        <article>
+
+            <h1>História do Mascote do Android</h1>
+
+            <p>Provavelmente você save que o 
+            sistema operacional Android, mantido pelo google é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas talvez você não saiva que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
+
+            <h3>A Primeira versão</h3>
+
+            <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (Software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a sua equipe, não existia nenhuma solicitação da empresa a criação de um mascote.</p>
+
+            <img src="" alt="">
+
+            <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
+
+            <h3>Surge um novo mascote</h3>
+
+            <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária da Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+
+            <img src="" alt="">
+
+            <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deberia gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.</p>
+
+            <img src="" alt="">
+
+            A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
+
+            <video src=""></video>
+
+            <aside>
+
+                <h4>Quer aprender mais?</h4>
+
+                <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
+
+                <ol>
+                    <li>1.5 - Cupcake</li>
+                    <li>1.6 - Donut</li>
+                    <li>2.0 - Eclair</li>  
+                    <li>2.2 - Froyo</li>
+                    <li>2.3 - Gingerbread</li>
+                    <li>3.0 - Honeycomb</li>
+                    <li>4.0 - Ice Cream Sandwich</li>
+                    <li>4.1 - Jelly Bean</li>
+                    <li>4.4 - KitKat</li>
+                    <li>5.0 - Lolipop</li>
+                    <li>6.0 - Marshmallow</li>
+                    <li>7.0 - Nougat</li>
+                    <li>8.0 - Oreo</li>
+                    <li>9.0 - Pie</li>
+                </ol>
+
+                <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu a origem ao Android 10.</p>
+
+                <p>Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+
+            </aside>
+
+            <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
+
+        </article>
+    </main>
+    <footer>
+
+        <p>Site criado por Gustavo Guanabara para o CursoemVideo.</p>
+
+    </footer>
 </body>
 </html>
