--- a/html-css/desafios/modulo-2/d010/index.html
+++ b/html-css/desafios/modulo-2/d010/index.html
@@ -23,7 +23,7 @@
             <a href="#">Fale Conosco</a>
         </nav>
     </header>
-    <main style="width: 800px;">
+    <main>
         <article>
 
             <h1>História do Mascote do Android</h1>
