--- a/html-css/desafios/modulo-2/d010/index.html
+++ b/html-css/desafios/modulo-2/d010/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Android</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -33,7 +34,7 @@
 
             <h3>A Primeira versão</h3>
 
-            <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (Software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a sua equipe, não existia nenhuma solicitação da empresa a criação de um mascote.</p>
+            <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="#">Dan Morrill</a>. Ele conta que abriu o <a href="#">Inkscape</a> (Software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a sua equipe, não existia nenhuma solicitação da empresa a criação de um mascote.</p>
 
             <img src="" alt="">
 
@@ -41,7 +42,7 @@
 
             <h3>Surge um novo mascote</h3>
 
-            <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária da Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+            <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="#  ">Irina Blok</a>, também funcionária da Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
             <img src="" alt="">
 
@@ -59,26 +60,26 @@
 
                 <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
 
-                <ol>
-                    <li>1.5 - Cupcake</li>
-                    <li>1.6 - Donut</li>
-                    <li>2.0 - Eclair</li>  
-                    <li>2.2 - Froyo</li>
-                    <li>2.3 - Gingerbread</li>
-                    <li>3.0 - Honeycomb</li>
-                    <li>4.0 - Ice Cream Sandwich</li>
-                    <li>4.1 - Jelly Bean</li>
-                    <li>4.4 - KitKat</li>
-                    <li>5.0 - Lolipop</li>
-                    <li>6.0 - Marshmallow</li>
-                    <li>7.0 - Nougat</li>
-                    <li>8.0 - Oreo</li>
-                    <li>9.0 - Pie</li>
-                </ol>
+                    <ol>
+                        <li>1.5 - <u>Cupcake</u></li>
+                        <li>1.6 - <u>Donut</u></li>
+                        <li>2.0 - <u>Eclair</u></li>
+                        <li>2.2 - <u>Froyo</u></li>
+                        <li>2.3 - <u>Gingerbread</u></li>
+                        <li>3.0 - <u>Honeycomb</u></li>
+                        <li>4.0 - <u>Ice Cream Sandwich</u></li>
+                        <li>4.1 - <u>Jelly</u> Bean</li>
+                        <li>4.4 - <u>KitKat</u></li>
+                        <li>5.0 - <u>Lolipop</u></li>
+                        <li>6.0 - <u>Marshmallow</u></li>
+                        <li>7.0 - <u>Nougat</u></li>
+                        <li>8.0 - <u>Oreo</u></li>
+                        <li>9.0 - <u>Pie</u></li>
+                    </ol>
 
                 <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu a origem ao Android 10.</p>
 
-                <p>Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+                <p>Acesse aqui o site <a href="#">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
 
             </aside>
 
