--- a/html-css/desafios/modulo-2/d010/index.html
+++ b/html-css/desafios/modulo-2/d010/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Android</title>
     <link rel="stylesheet" href="estilos.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -36,23 +35,23 @@
 
             <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="#">Dan Morrill</a>. Ele conta que abriu o <a href="#">Inkscape</a> (Software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a sua equipe, não existia nenhuma solicitação da empresa a criação de um mascote.</p>
 
-            <img src="" alt="">
-
+            <img src="imagens/dan-droids.png" alt="DanDroids">
+            
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.</p>
 
             <h3>Surge um novo mascote</h3>
 
-            <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="#  ">Irina Blok</a>, também funcionária da Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+            <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="#">Irina Blok</a>, também funcionária da Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
-            <img src="" alt="">
+            <img src="imagens/irina-blok.jpg" alt="Irina Blok">
 
             <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deberia gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.</p>
 
-            <img src="" alt="">
+            <div><img src="imagens/bugdroid.png" alt="Bugdroid"></div>
 
             <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
 
-            <video src=""></video>
+            <div><iframe width="700" height="400" src="https://www.youtube.com/embed/l2UDgpLz20M?si=xElPcuFO4cCzg8YB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
             <aside>
 
