--- a/html-css/desafios/modulo-2/d010/index.html
+++ b/html-css/desafios/modulo-2/d010/index.html
@@ -34,7 +34,7 @@
             <h3>A Primeira versão</h3>
 
             <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="#">Dan Morrill</a>. Ele conta que abriu o <a href="#">Inkscape</a> (Software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a sua equipe, não existia nenhuma solicitação da empresa a criação de um mascote.</p>
-
+                
             <img src="imagens/dan-droids.png" alt="DanDroids">
             
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.</p>
@@ -51,7 +51,7 @@
 
             <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
 
-            <div><iframe width="700" height="400" src="https://www.youtube.com/embed/l2UDgpLz20M?si=xElPcuFO4cCzg8YB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="video"><iframe width="700" height="400" src="https://www.youtube.com/embed/l2UDgpLz20M?si=xElPcuFO4cCzg8YB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
             <aside>
 
