Série de Correções do Projeto - 1 Aula
Teve correções básicas.

--- a/html-css/desafios/modulo-2/d010/android.html
+++ b/html-css/desafios/modulo-2/d010/android.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Android</title>
+    <title>Como surgiu o mascote do Android?</title>
     <link rel="stylesheet" href="estilos.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
@@ -43,7 +43,7 @@
 
             <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="#">Irina Blok</a>, também funcionária da Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
-            <img src="imagens/irina-blok.jpg" alt="Irina Blok">
+            <div><img class="irina" src="imagens/irina-blok.jpg" alt="Irina Blok"></div>
 
             <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deberia gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.</p>
 
