--- a/html-css/desafios/modulo-2/d010/android.html
+++ b/html-css/desafios/modulo-2/d010/android.html
@@ -35,7 +35,7 @@
 
             <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="#">Dan Morrill</a>. Ele conta que abriu o <a href="#">Inkscape</a> (Software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a sua equipe, não existia nenhuma solicitação da empresa a criação de um mascote.</p>
                 
-            <img src="imagens/dan-droids.png" alt="DanDroids">
+            <div><img src="imagens/dan-droids.png" alt="DanDroids"></div>
             
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.</p>
 
@@ -53,34 +53,30 @@
 
             <div class="video"><iframe width="700" height="400" src="https://www.youtube.com/embed/l2UDgpLz20M?si=xElPcuFO4cCzg8YB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
-            <aside>
-
-                <h4>Quer aprender mais?</h4>
-
-                <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
-
-                    <ol>
-                        <li>1.5 - <u>Cupcake</u></li>
-                        <li>1.6 - <u>Donut</u></li>
-                        <li>2.0 - <u>Eclair</u></li>
-                        <li>2.2 - <u>Froyo</u></li>
-                        <li>2.3 - <u>Gingerbread</u></li>
-                        <li>3.0 - <u>Honeycomb</u></li>
-                        <li>4.0 - <u>Ice Cream Sandwich</u></li>
-                        <li>4.1 - <u>Jelly</u> Bean</li>
-                        <li>4.4 - <u>KitKat</u></li>
-                        <li>5.0 - <u>Lolipop</u></li>
-                        <li>6.0 - <u>Marshmallow</u></li>
-                        <li>7.0 - <u>Nougat</u></li>
-                        <li>8.0 - <u>Oreo</u></li>
-                        <li>9.0 - <u>Pie</u></li>
-                    </ol>
-
-                <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu a origem ao Android 10.</p>
-
-                <p>Acesse aqui o site <a href="#">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
-
-            </aside>
+            <div id="unico">
+                <aside>
+                    <h4>Quer aprender mais?</h4>
+                    <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
+                        <ol>
+                            <li>1.5 - <u>Cupcake</u></li>
+                            <li>1.6 - <u>Donut</u></li>
+                            <li>2.0 - <u>Eclair</u></li>
+                            <li>2.2 - <u>Froyo</u></li>
+                            <li>2.3 - <u>Gingerbread</u></li>
+                            <li>3.0 - <u>Honeycomb</u></li>
+                            <li>4.0 - <u>Ice Cream Sandwich</u></li>
+                            <li>4.1 - <u>Jelly</u> Bean</li>
+                            <li>4.4 - <u>KitKat</u></li>
+                            <li>5.0 - <u>Lolipop</u></li>
+                            <li>6.0 - <u>Marshmallow</u></li>
+                            <li>7.0 - <u>Nougat</u></li>
+                            <li>8.0 - <u>Oreo</u></li>
+                            <li>9.0 - <u>Pie</u></li>
+                        </ol>
+                    <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu a origem ao Android 10.</p>
+                    <p>Acesse aqui o site <a href="#">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+                </aside>
+            </div>
 
             <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <strong>Android</strong> e seu simpático mascote.</p>
 
