--- a/html-css/desafios/modulo-2/d010/android.html
+++ b/html-css/desafios/modulo-2/d010/android.html
@@ -33,7 +33,7 @@
 
             <h3>A Primeira versão</h3>
 
-            <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="#">Dan Morrill</a>. Ele conta que abriu o <a href="#">Inkscape</a> (Software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a sua equipe, não existia nenhuma solicitação da empresa a criação de um mascote.</p>
+            <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank">Inkscape</a> (Software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a sua equipe, não existia nenhuma solicitação da empresa a criação de um mascote.</p>
                 
             <div>
             <picture>
@@ -49,7 +49,7 @@
 
             <h3>Surge um novo mascote</h3>
 
-            <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="#">Irina Blok</a>, também funcionária da Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+            <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://inkscape.org/pt-br/" target="_blank">Irina Blok</a>, também funcionária da Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
             <div>
             <picture>   
@@ -65,7 +65,7 @@
 
             <div><img src="imagens/bugdroid.png" alt="Bugdroid"></div>
 
-            <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
+            <p>A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <google>Google</google> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
 
             <div class="video"><iframe width="700" height="400" src="https://www.youtube.com/embed/l2UDgpLz20M?si=xElPcuFO4cCzg8YB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 
@@ -74,23 +74,24 @@
                     <h4>Quer aprender mais?</h4>
                     <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
                         <ol>
-                            <li>1.5 - <u>Cupcake</u></li>
-                            <li>1.6 - <u>Donut</u></li>
-                            <li>2.0 - <u>Eclair</u></li>
-                            <li>2.2 - <u>Froyo</u></li>
-                            <li>2.3 - <u>Gingerbread</u></li>
-                            <li>3.0 - <u>Honeycomb</u></li>
-                            <li>4.0 - <u>Ice Cream Sandwich</u></li>
-                            <li>4.1 - <u>Jelly</u> Bean</li>
-                            <li>4.4 - <u>KitKat</u></li>
-                            <li>5.0 - <u>Lolipop</u></li>
-                            <li>6.0 - <u>Marshmallow</u></li>
-                            <li>7.0 - <u>Nougat</u></li>
-                            <li>8.0 - <u>Oreo</u></li>
-                            <li>9.0 - <u>Pie</u></li>
+                            <li>1.5 - <u><abbr title="Bolo de Copo">Cupcake</abbr></u></li>
+                            <li>1.6 - <u><abbr title="Rosquinha">Donut</abbr></u></li>
+                            <li>2.0 - <u><abbr title="Bomba">Eclair</abbr></u></li>
+                            <li>2.2 - <u><abbr title="Iogurte de Gengibre">Froyo</abbr></u></li>
+                            <li>2.3 - <u><abbr title="Biscoito de Gengibre">Gingerbread</abbr></u></li>
+                            <li>3.0 - <u><abbr title="Favo de mel">Honeycomb</abbr></u></li>
+                            <li>4.0 - <u><abbr title="Sanduíche de Sorvete">Ice Cream Sandwich</abbr></u></li>
+                            <li>4.1 - <u><abbr title="Jujuba">Jelly</abbr></u> Bean</li>
+                            <li>4.4 - <u><abbr title="KitKat">KitKat</abbr></u></li>
+                            <li>5.0 - <u><abbr title="Pirulito">Lolipop</abbr></u></li>
+                            <li>6.0 - <u><abbr title="Marshmallow">Marshmallow</abbr></u></li>
+                            <li>7.0 - <u><abbr title="Torrone">Nougat</abbr></u></li>
+                            <li>8.0 - <u><abbr title="Oreo">Oreo</abbr></u></li>
+                            <li>9.0 - <u><abbr title="Torta">Pie</abbr></u></li>
                         </ol>
-                    <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu a origem ao Android 10.</p>
-                    <p>Acesse aqui o site <a href="#">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+                    <p>Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu a origem ao Android 10.</p>
+
+                    <p>Acesse aqui o site <a href="https://www.android.com/intl/en_uk/history/" target="_blank">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
                 </aside>
             </div>
 
@@ -100,8 +101,7 @@
     </main>
     <footer>
 
-        <p>Site criado por <strong>Gustavo Guanabara</strong> para o <strong>CursoemVideo</strong>.</p>
-
+        <p>Site criado por <a href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a>.</p>
     </footer>
 </body>
 </html>
