--- a/html-css/desafios/modulo-2/d010/android.html
+++ b/html-css/desafios/modulo-2/d010/android.html
@@ -33,7 +33,7 @@
 
             <h3>A Primeira versão</h3>
 
-            <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank">Inkscape</a> (Software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a sua equipe, não existia nenhuma solicitação da empresa a criação de um mascote.</p>
+            <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank" class="externo">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank" class="externo">Inkscape</a> (Software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a sua equipe, não existia nenhuma solicitação da empresa a criação de um mascote.</p>
                 
             <div>
             <picture>
@@ -49,7 +49,7 @@
 
             <h3>Surge um novo mascote</h3>
 
-            <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://inkscape.org/pt-br/" target="_blank">Irina Blok</a>, também funcionária da Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
+            <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://inkscape.org/pt-br/" target="_blank" class="externo">Irina Blok</a>, também funcionária da Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
             <div>
             <picture>   
@@ -91,7 +91,7 @@
                         </ol>
                     <p>Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu a origem ao Android 10.</p>
 
-                    <p>Acesse aqui o site <a href="https://www.android.com/intl/en_uk/history/" target="_blank">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+                    <p>Acesse aqui o site <a href="https://www.android.com/intl/en_uk/history/" target="_blank" class="externo">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
                 </aside>
             </div>
 
