--- a/html-css/exercícios/modulo-3/capitulo-19/ex022/fundo006.html
+++ b/html-css/exercícios/modulo-3/capitulo-19/ex022/fundo006.html
@@ -32,6 +32,14 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque non est odit corrupti, nam natus cum dicta cumque nesciunt reprehenderit inventore fugit quod delectus sint beatae vitae, incidunt qui rerum.
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta assumenda quam libero excepturi ratione error sapiente impedit, veritatis maiores modi? Fugit nostrum maiores animi voluptates praesentium, qui eius molestiae modi!
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis sint deserunt explicabo rerum facere incidunt quibusdam id doloribus aut tempora eligendi magni nihil sunt, atque totam, consectetur, dolorum obcaecati voluptatum.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta assumenda quam libero excepturi ratione error sapiente impedit, veritatis maiores modi? Fugit nostrum maiores animi voluptates praesentium, qui eius molestiae modi!
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis sint deserunt explicabo rerum facere incidunt quibusdam id doloribus aut tempora eligendi magni nihil sunt, atque totam, consectetur, dolorum obcaecati voluptatum
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta assumenda quam libero excepturi ratione error sapiente impedit, veritatis maiores modi? Fugit nostrum maiores animi voluptates praesentium, qui eius molestiae modi!
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis sint deserunt explicabo rerum facere incidunt quibusdam id doloribus aut tempora eligendi magni nihil sunt, atque totam, consectetur, dolorum obcaecati voluptatum
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta assumenda quam libero excepturi ratione error sapiente impedit, veritatis maiores modi? Fugit nostrum maiores animi voluptates praesentium, qui eius molestiae modi!
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis sint deserunt explicabo rerum facere incidunt quibusdam id doloribus aut tempora eligendi magni nihil sunt, atque totam, consectetur, dolorum obcaecati voluptatum
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta assumenda quam libero excepturi ratione error sapiente impedit, veritatis maiores modi? Fugit nostrum maiores animi voluptates praesentium, qui eius molestiae modi!
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis sint deserunt explicabo rerum facere incidunt quibusdam id doloribus aut tempora eligendi magni nihil sunt, atque totam, consectetur, dolorum obcaecati voluptatum
         </p>
     </main>
 </body>
