Ex 23 - Header Feito

--- a/html-css/exercícios/modulo-3/capitulo-20/ex023/index.html
+++ b/html-css/exercícios/modulo-3/capitulo-20/ex023/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parallax</title>
+    <title>Cordel Moderno</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Cordel Moderno</h1>
+        <h2>Por <strong>Milton Duarte</strong></h2>
+    </header>
+    <p>
+        
+    </p>
 </body>
 </html>
