--- a/html-css/exercícios/modulo-3/capitulo-20/ex023/index.html
+++ b/html-css/exercícios/modulo-3/capitulo-20/ex023/index.html
@@ -11,8 +11,11 @@
         <h1>Cordel Moderno</h1>
         <h2>Por <strong>Milton Duarte</strong></h2>
     </header>
-    <p class="padding_p">
-        Estou ficando cansado <br>Da tal tecnologia <br> Só se fala por e-mail <br>Mensagem curta e fria <br>Twitter e Facebook <br>Antes que eu caduque <br>Vou dizer tudo em poesia.
-    </p>
+    <article>
+        <p class="padding_p">
+            Estou ficando cansado <br>Da tal tecnologia <br> Só se fala por e-mail <br>Mensagem curta e fria <br>Twitter e Facebook <br>Antes que eu caduque <br>Vou dizer tudo em poesia.
+        </p>
+    </article>
+    <img src="imagens/girassol.jpg" alt="Girasol">
 </body>
 </html>
