--- a/html-css/exercícios/modulo-3/capitulo-20/ex023/index.html
+++ b/html-css/exercícios/modulo-3/capitulo-20/ex023/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <h2>Por <strong>Milton Duarte</strong></h2>
+        <h2>Por <a href="https://www.recantodasletras.com.br/autor_textos.php?id=9806">Milton Duarte</a></h2>
     </header>
     <article>
         <p class="padding_p">
