--- a/html-css/exercícios/modulo-3/capitulo-20/ex023/index.html
+++ b/html-css/exercícios/modulo-3/capitulo-20/ex023/index.html
@@ -18,5 +18,6 @@
     </article>
     <img src="imagens/girassol.jpg" alt="Girasol">
     <js src="script.js"></js>
+    <p>estou tentnado</p>
 </body>
 </html>
